@@ -1,0 +1,3 @@
+#!/bin/bash
+
+g++ --std=c++0x -o driver -I.. driver.cc -L../tmp -lsharedstreambuf -lbobcat
