@@ -1,3 +1,3 @@
-#define LIBRARY             "sharedsegment"
+#define LIBRARY             "sharedstreambuf"
 
 #include "../icmconf"
