@@ -2,6 +2,5 @@
 
 int SharedStreambuf::overflow(int ch)
 {
-//cerr << "overflow\n";
     return mode(ios::out) ? d_memory.put(ch) : EOF;
 }
