@@ -5,6 +5,10 @@ bobcat (3.??.??)
   * Added the description of the enum SizeUnit to the man-pages of all classes
     using FBB::SharedEnum::SizeUnit.
 
+  * SharedStreambuf: extractions (also insertions ?) sometimes failed to
+    operate correctly. Fixed by adding setg() and setp() calls to constructors
+    and underflow. Also added sharedstreambuf/driver.
+
 bobcat (3.22.01)
 
   * Hurd-i386 architectures do not (completely?) implement the POSIX standard,
